environments/prod/cast/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cast
  labels:
    app.kubernetes.io/part-of: cast-suite
    app.kubernetes.io/environment: prod
